Update contact information and skills in index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <h2>About Me</h2>
 <p>
 I am a motivated Python developer with basic knowledge in Python,
-Django, HTML, CSS and MySQL. I am looking for a fresher role or internship
+Django, HTML, CSS and SQL. I am looking for a fresher role or internship
 to start my IT career.
 </p>
 
@@ -21,7 +21,7 @@ to start my IT career.
     <li>Python</li>
     <li>Django</li>
     <li>HTML & CSS</li>
-    <li>MySQL</li>
+    <li>SQL</li>
     <li>Git & GitHub</li>
 </ul>
 
@@ -38,8 +38,8 @@ to start my IT career.
 </ul>
 
 <h2>Contact</h2>
-<p>Email: yourmail@gmail.com</p>
-<p>GitHub: <a href="https://github.com/abinasri">github.com/abinasri</a></p>
+<p>Email: sriabina38@gmail.com</p>
+<p>GitHub: <a href="https://github.com/Abinasri63" target="_blank">github.com/Abinasri63</a></p>
 
 </body>
 </html>
